[gd_scene load_steps=5 format=2]

[ext_resource path="res://UIScenes/Overlay.gd" type="Script" id=1]
[ext_resource path="res://JetBrainsMono-VariableFont_wght.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[node name="Overlay" type="CanvasLayer"]
follow_viewport_enable = true
script = ExtResource( 1 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -1341.6
margin_top = -868.233
margin_right = -750.6
margin_bottom = -797.233
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FuelBar" type="ProgressBar" parent="."]
margin_left = -1281.34
margin_top = -782.151
margin_right = -690.342
margin_bottom = -711.151
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyBar" type="ProgressBar" parent="."]
margin_left = -1220.22
margin_top = -688.321
margin_right = -629.223
margin_bottom = -617.321
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPLabel" type="Label" parent="."]
margin_left = -1421.76
margin_top = -862.729
margin_right = -1361.76
margin_bottom = -727.729
custom_fonts/font = SubResource( 1 )
text = "HP
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyLabel" type="Label" parent="."]
margin_left = -1422.01
margin_top = -688.482
margin_right = -1242.01
margin_bottom = -484.482
custom_fonts/font = SubResource( 1 )
text = "Energy

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FuelLabel" type="Label" parent="."]
margin_left = -1423.39
margin_top = -782.412
margin_right = -1303.39
margin_bottom = -578.412
custom_fonts/font = SubResource( 1 )
text = "Fuel

"
__meta__ = {
"_edit_use_anchors_": false
}
